hphp/hack/test/typecheck/nameof/parsing/nameof_darray.php.exp
File "nameof_darray.php", line 5, characters 12-17:
`nameof` can only be used with a class (Parsing[1002])
