hphp/hack/test/typecheck/nameof/parsing/nameof_darray.php
<?hh

class C {
  public static function f(): void {
    nameof dict[];
  }
}
